#716 typo